fitur  untuk ganerate cv
